--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/src/assets/null_pointer_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NullPointer - Cathode Ray Games Reimagined</title>
+    <title>Null_Pointer - HackCMU 2025</title>
   </head>
   <body>
     <div id="root"></div>
